# lemure_ros

./: README.md
lemure_control/: CMakeLists.txt  package.xml
lemure_control/config/: control.yml  localization.yml
lemure_control/launch/: control.launch
lemure_description/: CMakeLists.txt  package.xml
lemure_description/launch/: description.launch  display.launch
lemure_description/meshes/: allied_vision.stl  base_link.STL  battery.STL  caster_wheels.STL  motors.STL  spacers.STL  wheel.STL
lemure_description/rviz/: lemure.rviz  lemure_with_sensors.rviz
lemure_description/urdf/: body.xacro  lemure.urdf.xacro  transmission.xacro
lemure_description/urdf/sensors/: imu.xacro  laser.xacro  rgb_camera.xacro
lemure_gazebo/: CMakeLists.txt  package.xml
lemure_gazebo/launch/: empty_world.launch  spawn_lemure.launch  willowgarage_world.launch
