<?xml version="1.0"?>
<package format="2">
  <name>lemure_gazebo</name>
  <version>0.0.1</version>
  <description>The lemure_gazebo package</description>

  <maintainer email="lucas.hehl@darwinrobotica.com.br">Lucas Hehl</maintainer>

  <license>GPLv3</license>

  <url type="website">https://docs.darwinrobotica.com.br</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>lemure_control</build_depend>
  <build_depend>lemure_description</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>lemure_control</build_export_depend>
  <build_export_depend>lemure_description</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>lemure_control</exec_depend>
  <exec_depend>lemure_description</exec_depend>

  <export>

  </export>
</package>
